# OCC-CSG

./: CMakeLists.txt
cmake/: CreateLibrary.cmake
src/: CMakeLists.txt
